# ai

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml
configs/calcium_imaging/: default.yaml
docs/: architecture.md  roadmap.md
notebooks/: 01_load_and_inspect.ipynb  02_preprocess_baseline.ipynb  03_basic_analysis.ipynb
src/neuroengine/: __init__.py
src/neuroengine/analysis/: __init__.py  patterns.py  stats.py
src/neuroengine/export/: __init__.py  save_results.py
src/neuroengine/io/: __init__.py  loaders.py  validation.py
src/neuroengine/preprocess/: __init__.py  baseline.py  filters.py  normalization.py
src/neuroengine/signals/: __init__.py  traces.py
src/neuroengine/utils/: __init__.py  paths.py
src/neuroengine/visualization/: __init__.py  plots.py
tests/: test_analysis.py  test_io.py  test_preprocess.py
