##
# pyproject.toml
#
# This configuration file defines metadata and build requirements for the
# Neuro Data Engine.  The project uses the default build backend provided by
# setuptools.  Dependencies are intentionally kept in `requirements.txt` to
# allow flexibility in environment management, but core metadata lives here
# for packaging.  See PEP 621 for details on the fields used below.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-data-engine"
version = "0.1.0"
description = "A modular pipeline for loading, preprocessing, analysing and visualising neural recording data."
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Your Name", email = "your.email@example.com" } ]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/misztof2/ai"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuroengine*"]
